--- a/nats.yaml
+++ b/nats.yaml
@@ -7,18 +7,16 @@ spec:
   interval: 1m
   url: https://nats-io.github.io/k8s/helm/charts/
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
 metadata:
   name: nats
   namespace: flux-system
 spec:
-  interval: 5m
-  chart:
-    spec:
-      chart: nats
-      sourceRef:
-        kind: HelmRepository
-        name: nats
-        namespace: flux-system
-      interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: nats
+  interval: 1m
+  prune: true
+  validation: client
+  targetNamespace: project
