--- a/nats.yaml
+++ b/nats.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: nats
+  name: my-nats
   namespace: flux-system
 spec:
   interval: 1m
