--- a/nats.yaml
+++ b/nats.yaml
@@ -7,16 +7,18 @@ spec:
   interval: 1m
   url: https://nats-io.github.io/k8s/helm/charts/
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
-kind: Kustomization
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
 metadata:
   name: nats
   namespace: flux-system
 spec:
-  sourceRef:
-    kind: HelmRepository
-    name: nats
   interval: 1m
-  prune: true
-  validation: client
-  targetNamespace: project
+  chart:
+    spec:
+      chart: nats
+      sourceRef:
+        kind: HelmRepository
+        name: nats
+        namespace: flux-system
+      interval: 1m
