--- a/nats.yaml
+++ b/nats.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: my-nats
+  name: nats
   namespace: flux-system
 spec:
   interval: 1m
@@ -17,8 +17,11 @@ spec:
   chart:
     spec:
       chart: nats/nats
+      version: '0.10.0'
       sourceRef:
         kind: HelmRepository
         name: nats
         namespace: flux-system
       interval: 1m
+  values:
+    replicaCount: 1
