--- a/nats.yaml
+++ b/nats.yaml
@@ -11,7 +11,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: nats
-  namespace: project
+  namespace: flux-system
 spec:
   interval: 1m
   chart:
@@ -23,5 +23,4 @@ spec:
         name: nats
         namespace: flux-system
       interval: 1m
-  values:
-    replicaCount: 1
+  targetNamespace: project
