--- a/nats.yaml
+++ b/nats.yaml
@@ -16,7 +16,7 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: nats/nats
+      chart: nats
       version: '0.10.0'
       sourceRef:
         kind: HelmRepository
