--- a/nats.yaml
+++ b/nats.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: nats
+  name: my-nats
   namespace: project
 spec:
   interval: 1m
