--- a/todo-app.yaml
+++ b/todo-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: gitops-app
+  name: todo-app
   namespace: flux-system
 spec:
   sourceRef:
