--- a/source.yaml
+++ b/source.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: project
-  namespace: project
+  name: project-repo
+  namespace: flux-system
 spec:
   interval: 1m
   url: https://github.com/tsa-dom/devops-with-kubernetes
