--- a/todo-app.yaml
+++ b/todo-app.yaml
@@ -12,3 +12,7 @@ spec:
   prune: true
   validation: client
   targetNamespace: project
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
