--- a/secret.yaml
+++ b/secret.yaml
@@ -18,7 +18,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
-  path: ./Project/manifests/secrets
+  path: Project/manifests/secrets
   prune: true
   sourceRef:
     kind: GitRepository
@@ -27,3 +27,4 @@ spec:
     provider: sops
     secretRef:
       name: sops-age
+  targetNamespace: project
