Modified secret source

--- a/secret.yaml
+++ b/secret.yaml
@@ -1,28 +1,26 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
-  name: secrets
+  name: my-secrets
   namespace: flux-system
 spec:
   interval: 1m
   ref:
     branch: main
-  secretRef:
-    name: secrets
   url: https://github.com/tsa-dom/devops-with-kubernetes
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: secrets
+  name: my-secrets
   namespace: flux-system
 spec:
   interval: 1m
-  path: Project/manifests/secrets
+  path: ./Project/manifests/secrets
   prune: true
   sourceRef:
     kind: GitRepository
-    name: secrets
+    name: my-secrets
   decryption:
     provider: sops
     secretRef:
