--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -16,7 +16,7 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: prometheus-community/kube-prometheus-stack
+      chart: kube-prometheus-stack
       version: '21.0.3'
       sourceRef:
         kind: HelmRepository
